--- a/styles-publicaciones.css
+++ b/styles-publicaciones.css
@@ -7,7 +7,7 @@ body {
   }
   
   header {
-    background-color: #4267b2;
+    background-color: #39569c;
     color: #fff;
     padding: 10px;
     text-align: center;
@@ -119,41 +119,9 @@ body {
     display: none;
   }
 
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  header {
-    background-color: #4267b2;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-  }
-  
-  .post-container {
-    width: 100%;
-    max-width: 800px; /* Aumenta el ancho máximo para mostrar más contenido */
-    margin: 0 auto; /* Centra el contenedor de publicaciones */
-  }
-  
-  .post-list {
-    margin-top: 20px;
-  }
-  
   .profile-container {
     position: fixed;
-    top: 90px;
+    top: 400px; /* Ajusta la distancia desde el borde superior según sea necesario */
     right: 10px;
     background-color: #fff;
     padding: 10px;
@@ -162,7 +130,7 @@ body {
     z-index: 999;
     display: flex;
     align-items: center;
-  }
+}
   
   .profile-container .profile-picture img {
     width: 40px;
