--- a/styles-publicaciones.css
+++ b/styles-publicaciones.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #fff;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -103,7 +103,7 @@ body {
     background-color: #39569c; /* Cambio de color al pasar el ratón sobre el botón de publicar */
   }
 .page-header {
-    background-color: #4267b2;
+    background-color: #0B6CFB;
     color: #fff;
     text-align: center;
     padding: 20px 0; /* Espaciado interno superior e inferior */
@@ -111,6 +111,7 @@ body {
   }
   
   .page-header h1 {
+    background-color: #0B6CFB;
     margin: 0; /* Eliminar el margen predeterminado del encabezado */
     font-size: 2em; /* Tamaño de fuente grande */
   }
