--- a/styles-publicaciones.css
+++ b/styles-publicaciones.css
@@ -20,6 +20,7 @@ body {
     margin-top: 20px;
   }
   
+  
   .post-container {
     width: 100%;
     max-width: 800px; /* Aumenta el ancho máximo para mostrar más contenido */
@@ -34,7 +35,7 @@ body {
     background-color: #fff;
     margin: 20px 0; /* Mayor espacio entre las publicaciones */
     padding: 20px;
-    border-radius: 12px; /* Bordes redondeados */
+    border-radius: 12px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sutil sombra */
     transition: transform 0.2s ease-in-out; /* Transición al pasar el ratón sobre una publicación */
   }
@@ -112,8 +113,8 @@ body {
   
   .page-header h1 {
     background-color: #0B6CFB;
-    margin: 0; /* Eliminar el margen predeterminado del encabezado */
-    font-size: 2em; /* Tamaño de fuente grande */
+    margin: 0;
+    font-size: 2em;
   }
 
   .hidden {
@@ -201,17 +202,23 @@ body {
   color: #333;
 }
 
-.btn-custom {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+.button-container {
+    display: flex;
+    justify-content: flex-start; /* Alinea el contenido al principio (izquierda) */
+    width: 100%; /* Ocupa todo el ancho disponible */
+    margin-bottom: 10px;
 }
 
-.btn-custom:hover {
-  background-color: #0056b3;
+.back-button {
+    background-color: #4267b2;
+    color: #fff;
+    padding: 12px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+    position: absolute;
+    left: 20px;
+    top: 20px;
 }
+
